--- a/TTScannerDemo/Info.plist
+++ b/TTScannerDemo/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>Koogeek Scanner</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -20,6 +22,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Used to capture photo or scan barcode</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Used to access device contacts</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Used to access Photo library</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Used to access microphone</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
